--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -1,3 +1,4 @@
+# yamllint disable rule:line-length
 name: Publish signed container image
 
 on:
@@ -10,7 +11,43 @@ permissions:
   id-token: write
 
 jobs:
+  enforce-policy:
+    name: Verify release branch policy
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Ensure release targets protected branch
+        env:
+          TARGET: ${{ github.event.release.target_commitish }}
+          REPO: ${{ github.repository }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          if ! command -v jq >/dev/null 2>&1; then
+            sudo apt-get update
+            sudo apt-get install -y jq
+          fi
+          if [ -z "${TARGET}" ]; then
+            echo "::error::Release target branch is not specified."
+            exit 1
+          fi
+          response=$(curl -fsSL -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${GH_TOKEN}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/repos/${REPO}/branches/${TARGET}" || true)
+          if [ -z "${response}" ]; then
+            echo "::error::Unable to retrieve branch metadata for '${TARGET}'."
+            exit 1
+          fi
+          protected=$(echo "${response}" | jq -r '.protected // false')
+          if [ "${protected}" != "true" ]; then
+            echo "::error::Releases must originate from a protected branch. Target '${TARGET}' is not protected."
+            exit 1
+          fi
+          echo "Target branch '${TARGET}' is protected."
+
   build-and-sign:
+    needs: enforce-policy
     name: Build, push, and sign container image
     runs-on: ubuntu-latest
     permissions:
@@ -64,12 +101,13 @@ jobs:
             type=raw,value=${{ steps.release.outputs.version }}
             type=raw,value=latest
 
-      - name: Build and push image
+      - name: Build and push multi-arch image
         id: build
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
@@ -83,9 +121,9 @@ jobs:
 
       - name: Sign container image (keyless)
         env:
-          COSIGN_EXPERIMENTAL: 1
+          COSIGN_YES: true
         run: |
-          cosign sign --yes ghcr.io/${{ github.repository }}@${{ steps.build.outputs.digest }}
+          cosign sign ghcr.io/${{ github.repository }}@${{ steps.build.outputs.digest }}
 
   provenance:
     name: Generate SLSA provenance
