--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "scipy>=1.16.2; python_version >= \"3.10\"",
     "scipy>=1.10.0,<1.11; python_version < \"3.10\"",
     "pandas>=2.3.3",
-    "networkx>=3.5",
+    "networkx>=3.5; python_version >= \"3.11\"",
+    "networkx>=3.4.2,<3.5; python_version < \"3.11\"",
     "pydantic>=2.12.0,<3.0.0",
     "pydantic-settings>=2.11.0,<3.0.0",
     "pandera>=0.20.4,<0.21",
