--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ numpy>=1.26.4,<2.0; python_version < "3.10"
 scipy>=1.16.2; python_version >= "3.10"
 scipy>=1.10.0,<1.11; python_version < "3.10"
 pandas>=2.3.3
-networkx>=3.5
+networkx>=3.5; python_version >= "3.11"
+networkx>=3.4.2,<3.5; python_version < "3.11"
 
 # Data validation
 pydantic>=2.12.0,<3.0.0
