--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,15 @@ numpy>=1.26.4,<2.0; python_version < "3.10"
 scipy>=1.16.2; python_version >= "3.10"
 scipy>=1.10.0,<1.11; python_version < "3.10"
 pandas>=2.3.3
-networkx>=3.5; python_version >= "3.11"
-networkx>=3.4.2,<3.5; python_version < "3.11"
+networkx>=3.5; python_version >= "3.10"
+networkx>=3.1,<3.2; python_version < "3.10"
 
 # Data validation
 pydantic>=2.12.0,<3.0.0
 pydantic-settings>=2.11.0,<3.0.0
 pandera>=0.20.4,<0.21
-exchange-calendars>=4.11.1
+exchange-calendars>=4.11.1; python_version >= "3.10"
+exchange-calendars>=3.6.3,<4.0; python_version < "3.10"
 
 # Configuration & instrumentation
 PyYAML>=6.0.3
