--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ dev = [
     "build>=1.3.0",
     "twine>=5.1.1",
     "pip-tools>=7.5.1",
+    "cibuildwheel>=2.16",
 ]
 docs = [
     "mkdocs>=1.6.0",
