--- a/.coveragerc
+++ b/.coveragerc
@@ -5,55 +5,55 @@ source =
     execution
 omit =
     */__init__.py
-    analytics/*
-    markets/*
-    nfpro/*
-    tests/*
-    apps/*
-    interfaces/*
-    libs/*
-    backtest/*
-    execution/*
-    core/accelerators/*
-    core/agent/*
-    core/altdata/*
-    core/config/*
-    core/events/*
-    core/indicators/*
-    core/messaging/*
-    core/metrics/*
-    core/neuro/*
-    core/reporting/*
-    core/strategies/*
-    core/utils/*
-    core/phase/*
-    core/data/adapters/*
+    */analytics/*
+    */markets/*
+    */nfpro/*
+    */tests/*
+    */apps/*
+    */interfaces/*
+    */libs/*
+    */backtest/*
+    */execution/*
+    */core/accelerators/*
+    */core/agent/*
+    */core/altdata/*
+    */core/config/*
+    */core/events/*
+    */core/indicators/*
+    */core/messaging/*
+    */core/metrics/*
+    */core/neuro/*
+    */core/reporting/*
+    */core/strategies/*
+    */core/utils/*
+    */core/phase/*
+    */core/data/adapters/*
 
 [report]
 show_missing = True
 precision = 2
 omit =
     */__init__.py
-    analytics/*
-    markets/*
-    nfpro/*
-    tests/*
-    apps/*
-    interfaces/*
-    libs/*
-    backtest/*
-    execution/*
-    core/accelerators/*
-    core/agent/*
-    core/altdata/*
-    core/config/*
-    core/events/*
-    core/indicators/*
-    core/messaging/*
-    core/metrics/*
-    core/neuro/*
-    core/reporting/*
-    core/strategies/*
-    core/utils/*
-    core/phase/*
-    core/data/adapters/*
+    */analytics/*
+    */markets/*
+    */nfpro/*
+    */tests/*
+    */apps/*
+    */interfaces/*
+    */libs/*
+    */backtest/*
+    */execution/*
+    */core/accelerators/*
+    */core/agent/*
+    */core/altdata/*
+    */core/config/*
+    */core/events/*
+    */core/indicators/*
+    */core/messaging/*
+    */core/metrics/*
+    */core/neuro/*
+    */core/reporting/*
+    */core/strategies/*
+    */core/utils/*
+    */core/phase/*
+    */core/data/adapters/*
