--- a/.coveragerc
+++ b/.coveragerc
@@ -4,56 +4,56 @@ source =
     backtest
     execution
 omit =
-    */__init__.py
-    */analytics/*
-    */markets/*
-    */nfpro/*
-    */tests/*
-    */apps/*
-    */interfaces/*
-    */libs/*
-    */backtest/*
-    */execution/*
-    */core/accelerators/*
-    */core/agent/*
-    */core/altdata/*
-    */core/config/*
-    */core/events/*
-    */core/indicators/*
-    */core/messaging/*
-    */core/metrics/*
-    */core/neuro/*
-    */core/reporting/*
-    */core/strategies/*
-    */core/utils/*
-    */core/phase/*
-    */core/data/adapters/*
+    **/__init__.py
+    analytics/**
+    markets/**
+    nfpro/**
+    tests/**
+    apps/**
+    interfaces/**
+    libs/**
+    backtest/**
+    execution/**
+    core/accelerators/**
+    core/agent/**
+    core/altdata/**
+    core/config/**
+    core/events/**
+    core/indicators/**
+    core/messaging/**
+    core/metrics/**
+    core/neuro/**
+    core/reporting/**
+    core/strategies/**
+    core/utils/**
+    core/phase/**
+    core/data/adapters/**
 
 [report]
 show_missing = True
 precision = 2
 omit =
-    */__init__.py
-    */analytics/*
-    */markets/*
-    */nfpro/*
-    */tests/*
-    */apps/*
-    */interfaces/*
-    */libs/*
-    */backtest/*
-    */execution/*
-    */core/accelerators/*
-    */core/agent/*
-    */core/altdata/*
-    */core/config/*
-    */core/events/*
-    */core/indicators/*
-    */core/messaging/*
-    */core/metrics/*
-    */core/neuro/*
-    */core/reporting/*
-    */core/strategies/*
-    */core/utils/*
-    */core/phase/*
-    */core/data/adapters/*
+    **/__init__.py
+    analytics/**
+    markets/**
+    nfpro/**
+    tests/**
+    apps/**
+    interfaces/**
+    libs/**
+    backtest/**
+    execution/**
+    core/accelerators/**
+    core/agent/**
+    core/altdata/**
+    core/config/**
+    core/events/**
+    core/indicators/**
+    core/messaging/**
+    core/metrics/**
+    core/neuro/**
+    core/reporting/**
+    core/strategies/**
+    core/utils/**
+    core/phase/**
+    core/data/adapters/**
