--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -9,8 +9,78 @@ permissions:
   id-token: write
 
 jobs:
+  verify-ci:
+    name: Ensure release commit passed CI
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      checks: read
+      contents: read
+    steps:
+      - name: Validate commit status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const core = require('@actions/core');
+            const { owner, repo } = context.repo;
+            const tagName = context.payload.release?.tag_name;
+            if (!tagName) {
+              core.setFailed('Unable to determine the release tag name.');
+              return;
+            }
+
+            let ref;
+            try {
+              ref = await github.rest.git.getRef({ owner, repo, ref: `tags/${tagName}` });
+            } catch (error) {
+              core.setFailed(`Failed to locate tag ${tagName}: ${error.message}`);
+              return;
+            }
+
+            let targetSha = ref.data.object.sha;
+            let targetType = ref.data.object.type;
+            if (targetType === 'tag') {
+              const tagObject = await github.rest.git.getTag({ owner, repo, tag_sha: targetSha });
+              targetSha = tagObject.data.object.sha;
+              targetType = tagObject.data.object.type;
+            }
+
+            if (targetType !== 'commit') {
+              core.setFailed(`Tag ${tagName} does not resolve to a commit (resolved type: ${targetType}).`);
+              return;
+            }
+
+            const response = await github.rest.checks.listForRef({
+              owner,
+              repo,
+              ref: targetSha,
+              per_page: 100,
+            });
+
+            const workflowName = context.workflow;
+            const checkRuns = response.data.check_runs.filter((run) => run.name !== workflowName);
+            if (checkRuns.length === 0) {
+              core.setFailed(`No completed CI checks found for commit ${targetSha}. Run the test matrix before releasing.`);
+              return;
+            }
+
+            const pending = checkRuns.filter((run) => run.status !== 'completed');
+            if (pending.length > 0) {
+              const names = pending.map((run) => run.name).join(', ');
+              core.setFailed(`CI checks still in progress for commit ${targetSha}: ${names}`);
+              return;
+            }
+
+            const allowed = new Set(['success', 'neutral', 'skipped']);
+            const failing = checkRuns.filter((run) => !allowed.has(run.conclusion ?? ''));
+            if (failing.length > 0) {
+              const names = failing.map((run) => `${run.name} (${run.conclusion})`).join(', ');
+              core.setFailed(`Detected failing CI checks for commit ${targetSha}: ${names}`);
+            }
+
   build:
     name: Build, sign, and package
+    needs: verify-ci
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -53,28 +123,30 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Generate release notes and changelog
-        id: changelog
+      - name: Install release tooling
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install towncrier==23.11.0 build==1.3.0 twine==5.1.1 cyclonedx-bom==4.0.0
+
+      - name: Verify Towncrier fragments exist
         run: |
           set -euo pipefail
-          tag="${{ github.event.release.tag_name }}"
-          prev_tag=""
-          if git describe --tags --abbrev=0 "${tag}^" >/dev/null 2>&1; then
-            prev_tag="$(git describe --tags --abbrev=0 "${tag}^")"
+          if ! find newsfragments -type f ! -name 'README.md' ! -name '.gitkeep' -print -quit | grep -q .; then
+            echo "::error::No Towncrier news fragments found. Add at least one fragment before releasing."
+            exit 1
           fi
-          if [ -n "$prev_tag" ]; then
-            python tools/release/conventional_changelog.py \
-              --current-tag "$tag" \
-              --previous-tag "$prev_tag" \
-              --output release-notes.md \
-              --changelog CHANGELOG.md
-          else
-            python tools/release/conventional_changelog.py \
-              --current-tag "$tag" \
-              --output release-notes.md \
-              --changelog CHANGELOG.md
-          fi
-          echo "previous_tag=$prev_tag" >> "$GITHUB_OUTPUT"
+
+      - name: Build changelog with Towncrier
+        id: changelog
+        env:
+          RELEASE_VERSION: ${{ steps.release.outputs.version }}
+        run: |
+          set -euo pipefail
+          version="$RELEASE_VERSION"
+          release_date="$(date -u +%Y-%m-%d)"
+          towncrier build --yes --keep --version "$version" --date "$release_date"
+          towncrier build --draft --version "$version" --date "$release_date" > release-notes.md
+          echo "release_date=$release_date" >> "$GITHUB_OUTPUT"
 
       - name: Publish release notes and changelog
         uses: softprops/action-gh-release@v2
@@ -85,11 +157,6 @@ jobs:
             CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build==1.3.0 twine==5.1.1 cyclonedx-bom==4.0.0
 
       - name: Build wheel and sdist
         run: |
