--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -105,6 +105,19 @@ jobs:
         with:
           kustomize-version: '5.4.1'
 
+      - name: Install PyYAML for manifest templating
+        if: steps.configure_kube.outputs.deploy_enabled == 'true'
+        run: pip install --user --upgrade pyyaml
+
+      - name: Build rendered manifests
+        if: steps.configure_kube.outputs.deploy_enabled == 'true'
+        id: build_manifests
+        run: |
+          set -euo pipefail
+          manifest="$(mktemp)"
+          kustomize build deploy/kustomize/overlays/staging >"$manifest"
+          echo "path=$manifest" >>"$GITHUB_OUTPUT"
+
       - name: Diff manifest against cluster
         if: steps.configure_kube.outputs.deploy_enabled == 'true'
         run: |
@@ -117,6 +130,84 @@ jobs:
             exit "$status"
           fi
 
+      - name: Deploy canary workload
+        if: steps.configure_kube.outputs.deploy_enabled == 'true'
+        env:
+          MANIFEST_PATH: ${{ steps.build_manifests.outputs.path }}
+        run: |
+          set -euo pipefail
+          if [ -z "${MANIFEST_PATH:-}" ]; then
+            echo "Rendered manifest path is unavailable" >&2
+            exit 1
+          fi
+          canary_manifest="$(mktemp)"
+          python <<'PY' "$MANIFEST_PATH" "$canary_manifest"
+import copy
+import sys
+from pathlib import Path
+
+import yaml
+
+source_path = Path(sys.argv[1])
+dest_path = Path(sys.argv[2])
+
+documents = list(yaml.safe_load_all(source_path.read_text()))
+output_docs = []
+
+for doc in documents:
+    if not isinstance(doc, dict):
+        continue
+    if doc.get("kind") != "Deployment" or doc.get("metadata", {}).get("name") != "tradepulse-api":
+        continue
+    canary = copy.deepcopy(doc)
+    metadata = canary.setdefault("metadata", {})
+    metadata["name"] = f"{metadata.get('name')}-canary"
+    metadata.setdefault("labels", {})
+    metadata["labels"]["app.kubernetes.io/instance"] = "canary"
+    metadata.setdefault("annotations", {})
+    metadata["annotations"]["tradepulse.io/canary"] = "true"
+
+    spec = canary.setdefault("spec", {})
+    spec["replicas"] = 1
+    selector = spec.setdefault("selector", {}).setdefault("matchLabels", {})
+    selector["app.kubernetes.io/instance"] = "canary"
+    selector["app.kubernetes.io/track"] = "canary"
+
+    template = spec.setdefault("template", {})
+    template_metadata = template.setdefault("metadata", {})
+    template_labels = template_metadata.setdefault("labels", {})
+    template_labels["app.kubernetes.io/instance"] = "canary"
+    template_labels["app.kubernetes.io/track"] = "canary"
+
+    output_docs.append(canary)
+
+if not output_docs:
+    raise SystemExit("Failed to generate canary deployment from manifest")
+
+dest_path.write_text("\n---\n".join(yaml.safe_dump(doc) for doc in output_docs))
+PY
+          kubectl apply -n tradepulse-staging -f "$canary_manifest" --server-side --force-conflicts
+
+      - name: Wait for canary rollout
+        if: steps.configure_kube.outputs.deploy_enabled == 'true'
+        run: kubectl rollout status deployment/tradepulse-api-canary -n tradepulse-staging --timeout=5m
+
+      - name: Validate canary health and metrics
+        if: steps.configure_kube.outputs.deploy_enabled == 'true'
+        run: |
+          set -euo pipefail
+          if ! kubectl run tradepulse-api-canary-check \
+            -n tradepulse-staging \
+            --image=curlimages/curl:8.10.1 \
+            --restart=Never \
+            --attach \
+            --rm \
+            --command -- /bin/sh -c "set -euo pipefail; curl -fsS http://tradepulse-api.tradepulse-staging.svc.cluster.local/health > /tmp/health; curl -fsS http://tradepulse-api.tradepulse-staging.svc.cluster.local:8001/metrics > /tmp/metrics; [ -s /tmp/health ] && [ -s /tmp/metrics ]"; then
+            kubectl logs deployment/tradepulse-api-canary -n tradepulse-staging || true
+            kubectl delete deployment/tradepulse-api-canary -n tradepulse-staging --wait=true --ignore-not-found
+            exit 1
+          fi
+
       - name: Apply manifests
         if: steps.configure_kube.outputs.deploy_enabled == 'true'
         run: kubectl apply -k deploy/kustomize/overlays/staging --server-side --force-conflicts
@@ -124,6 +215,10 @@ jobs:
       - name: Wait for rollout
         if: steps.configure_kube.outputs.deploy_enabled == 'true'
         run: kubectl rollout status deployment/tradepulse-api -n tradepulse-staging --timeout=5m
+
+      - name: Remove canary deployment
+        if: always() && steps.configure_kube.outputs.deploy_enabled == 'true'
+        run: kubectl delete deployment/tradepulse-api-canary -n tradepulse-staging --ignore-not-found
 
   deploy-production:
     if: github.repository == 'neuron7x/TradePulse' && needs.deploy-staging.outputs.deploy_enabled == 'true' && github.ref == 'refs/heads/main' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production'))
@@ -146,6 +241,17 @@ jobs:
         uses: imranismail/setup-kustomize@v2
         with:
           kustomize-version: '5.4.1'
+
+      - name: Install PyYAML for manifest templating
+        run: pip install --user --upgrade pyyaml
+
+      - name: Build rendered manifests
+        id: build_manifests
+        run: |
+          set -euo pipefail
+          manifest="$(mktemp)"
+          kustomize build deploy/kustomize/overlays/production >"$manifest"
+          echo "path=$manifest" >>"$GITHUB_OUTPUT"
 
       - name: Configure kubeconfig
         id: configure_kube
@@ -172,8 +278,87 @@ jobs:
             exit "$status"
           fi
 
+      - name: Deploy canary workload
+        env:
+          MANIFEST_PATH: ${{ steps.build_manifests.outputs.path }}
+        run: |
+          set -euo pipefail
+          if [ -z "${MANIFEST_PATH:-}" ]; then
+            echo "Rendered manifest path is unavailable" >&2
+            exit 1
+          fi
+          canary_manifest="$(mktemp)"
+          python <<'PY' "$MANIFEST_PATH" "$canary_manifest"
+import copy
+import sys
+from pathlib import Path
+
+import yaml
+
+source_path = Path(sys.argv[1])
+dest_path = Path(sys.argv[2])
+
+documents = list(yaml.safe_load_all(source_path.read_text()))
+output_docs = []
+
+for doc in documents:
+    if not isinstance(doc, dict):
+        continue
+    if doc.get("kind") != "Deployment" or doc.get("metadata", {}).get("name") != "tradepulse-api":
+        continue
+    canary = copy.deepcopy(doc)
+    metadata = canary.setdefault("metadata", {})
+    metadata["name"] = f"{metadata.get('name')}-canary"
+    metadata.setdefault("labels", {})
+    metadata["labels"]["app.kubernetes.io/instance"] = "canary"
+    metadata.setdefault("annotations", {})
+    metadata["annotations"]["tradepulse.io/canary"] = "true"
+
+    spec = canary.setdefault("spec", {})
+    spec["replicas"] = 1
+    selector = spec.setdefault("selector", {}).setdefault("matchLabels", {})
+    selector["app.kubernetes.io/instance"] = "canary"
+    selector["app.kubernetes.io/track"] = "canary"
+
+    template = spec.setdefault("template", {})
+    template_metadata = template.setdefault("metadata", {})
+    template_labels = template_metadata.setdefault("labels", {})
+    template_labels["app.kubernetes.io/instance"] = "canary"
+    template_labels["app.kubernetes.io/track"] = "canary"
+
+    output_docs.append(canary)
+
+if not output_docs:
+    raise SystemExit("Failed to generate canary deployment from manifest")
+
+dest_path.write_text("\n---\n".join(yaml.safe_dump(doc) for doc in output_docs))
+PY
+          kubectl apply -n tradepulse-production -f "$canary_manifest" --server-side --force-conflicts
+
+      - name: Wait for canary rollout
+        run: kubectl rollout status deployment/tradepulse-api-canary -n tradepulse-production --timeout=10m
+
+      - name: Validate canary health and metrics
+        run: |
+          set -euo pipefail
+          if ! kubectl run tradepulse-api-canary-check \
+            -n tradepulse-production \
+            --image=curlimages/curl:8.10.1 \
+            --restart=Never \
+            --attach \
+            --rm \
+            --command -- /bin/sh -c "set -euo pipefail; curl -fsS http://tradepulse-api.tradepulse-production.svc.cluster.local/health > /tmp/health; curl -fsS http://tradepulse-api.tradepulse-production.svc.cluster.local:8001/metrics > /tmp/metrics; [ -s /tmp/health ] && [ -s /tmp/metrics ]"; then
+            kubectl logs deployment/tradepulse-api-canary -n tradepulse-production || true
+            kubectl delete deployment/tradepulse-api-canary -n tradepulse-production --wait=true --ignore-not-found
+            exit 1
+          fi
+
       - name: Apply manifests
         run: kubectl apply -k deploy/kustomize/overlays/production --server-side --force-conflicts
 
       - name: Wait for rollout
         run: kubectl rollout status deployment/tradepulse-api -n tradepulse-production --timeout=10m
+
+      - name: Remove canary deployment
+        if: always()
+        run: kubectl delete deployment/tradepulse-api-canary -n tradepulse-production --ignore-not-found
